# rules_rust

./: .gitignore  BUILD.bazel  MODULE.bazel  extensions.bzl
.bazelci/: presubmit.yml
bzlmod/private/: generate_repo.bzl  symlink_repo.bzl
bzlmod/private/cargo_bazel_bootstrap/: cargo_bazel_bootstrap.bzl
bzlmod/private/crate/: crate.bzl
bzlmod/private/crate/tag_classes/: annotation.bzl  from_cargo.bzl  spec.bzl
bzlmod/private/non_bzlmod_deps/: non_bzlmod_deps.bzl
bzlmod/private/toolchains/: toolchains.bzl
crate_universe/: deps_bootstrap.bzl
crate_universe/module_extensions/: crate.bzl
crate_universe/private/: crate.bzl  crates_repository.bzl  crates_vendor.bzl  generate_utils.bzl
crate_universe/private/module_extensions/: cargo_bazel_bootstrap.bzl
crate_universe/src/: config.rs  context.rs  rendering.rs
crate_universe/src/cli/: generate.rs
crate_universe/src/context/: crate_context.rs
crate_universe/src/metadata/: metadata_annotation.rs
crate_universe/src/rendering/templates/: module_build_file.j2
crate_universe/src/rendering/templates/partials/module/: deps_map.j2
crate_universe/src/utils/starlark/: label.rs
docs/: flatten.md  providers.md
examples/: .bazelignore
examples/bzlmod/crate_universe/: BUILD.bazel  Cargo.toml  MODULE.bazel  annotations.json
examples/bzlmod/crate_universe/src/: main.rs
examples/bzlmod/crates_repository/: BUILD.bazel  MODULE.bazel  cargo-bazel-lock.json
examples/bzlmod/crates_repository/src/: main.rs
examples/bzlmod/hello_world/: MODULE.bazel
rust/: defs.bzl  extensions.bzl  repositories.bzl
rust/private/: common.bzl  extensions.bzl  providers.bzl  repository_utils.bzl  rust.bzl  rustc.bzl
rust/private/module_extensions/: internal_deps.bzl  toolchain.bzl
tools/runfiles/: BUILD.bazel  runfiles.rs
tools/runfiles/data/: bzlmod_manifest
tools/runfiles/data/bzlmod/: _repo_mapping
tools/rust_analyzer/: BUILD.bazel
util/process_wrapper/: main.rs  options.rs  output.rs  rustc.rs
