module(
    name = "rules_rust",
    version = "0.19.0",
)

bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_cc", version = "0.0.1")
bazel_dep(name = "bazel_skylib", version = "1.2.0")
bazel_dep(
    name = "apple_support",
    repo_name = "build_bazel_apple_support",
    version = "1.4.0"
)

non_bzlmod_deps = use_extension("//bzlmod/private/non_bzlmod_deps:non_bzlmod_deps.bzl", "non_bzlmod_deps")
non_bzlmod_deps.non_bzlmod_deps()
use_repo(
    non_bzlmod_deps,
    "rules_rust_tinyjson"
)

# Set up a default toolchain, so we can use it to bootstrap cargo bazel.
toolchains = use_extension("//rust:extensions.bzl", "toolchains")
toolchains.host_tools()
use_repo(
    toolchains,
    rust_host_tools = "rules_rust_rust_host_tools",
)

cargo_bazel_bootstrap = use_extension("//rust:extensions.bzl", "cargo_bazel_bootstrap")
cargo_bazel_bootstrap.cargo_bazel_bootstrap()
use_repo(
    cargo_bazel_bootstrap,
    "cargo_bazel_bootstrap"
)
