load(
    "//rust:defs.bzl",
    "rust_doc",
    "rust_library",
    "rust_test",
)
load("//tools/runfiles/private:runfiles_utils.bzl", "workspace_name")

workspace_name(
    name = "workspace_name.env",
)

rust_library(
    name = "runfiles",
    srcs = ["runfiles.rs"],
    edition = "2018",
    rustc_env_files = [
        ":workspace_name.env",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "runfiles_test",
    crate = ":runfiles",
    data = glob(["data/**"]),
)

rust_library(
    name = "runfiles_root_module",
    srcs = ["runfiles.rs"],
    edition = "2018",
    rustc_env = {
        "RULES_RUST_RUNFILES_WORKSPACE_NAME": "_main",
    },
)

rust_test(
    name = "runfiles_root_module_test",
    crate = ":runfiles_root_module",
    data = glob(["data/**"]),
    rustc_env = {
        "RULES_RUST_RUNFILES_WORKSPACE_NAME": "_main",
    },
    rustc_flags = ["--cfg=bazel_root_module"],
)

rust_doc(
    name = "runfiles_doc",
    crate = ":runfiles",
)
