module(
    name = "crates_repository",
    version = "1.0"
)

bazel_dep(name = "rules_rust", version = "0.17.0")


local_path_override(module_name = "rules_rust", path = "../../..")

rust_toolchains = use_extension("@rules_rust//:extensions.bzl", "toolchains")
rust_toolchains.toolchain(edition = "2021")
use_repo(
    rust_toolchains,
    "rust_toolchains",
#    "rust_linux_x86_64__x86_64-unknown-linux-gnu_tools",
)
register_toolchains("@rust_toolchains//:all")

crates_vendor = use_extension("@rules_rust//:extensions.bzl", "crates_vendor")
crates_vendor.crates_vendor(
    manifests = ["//:Cargo.toml"],
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:cargo-bazel-lock.json",
#    annotations_file = "//rules_cros/toolchains/rust:annotations.json",
)
use_repo(
    crates_vendor,
    # Rename it from crates_<module_name> to crates
    crates = "crates_crates_repository",
)