module(
    name = "hello_world",
    version = "1.0",
)

bazel_dep(name = "rules_rust", version = "0.9.0")

local_path_override(
    module_name = "rules_rust",
    path = "../../..",
)

rust_toolchains = use_extension("@rules_rust//:extensions.bzl", "toolchains")

rust_toolchains.toolchain(edition = "2021")

use_repo(
    rust_toolchains,
    "rust_toolchains",
)

register_toolchains(
    "@rust_toolchains//:rust_linux_x86_64__x86_64-unknown-linux-gnu",
    "@rust_toolchains//:rust_darwin_aarch64__aarch64-apple-darwin",
    "@rust_toolchains//:rust_linux_aarch64__aarch64-unknown-linux-gnu",
    "@rust_toolchains//:rust_darwin_x86_64__x86_64-apple-darwin",
    "@rust_toolchains//:rust_windows_x86_64__x86_64-pc-windows-msvc",
    "@rust_toolchains//:rust_freebsd_x86_64__x86_64-unknown-freebsd",
)
