module(
    name = "hello_world",
    version = "1.0",
)

bazel_dep(name = "rules_rust", version = "0.9.0")

local_path_override(
    module_name = "rules_rust",
    path = "../../..",
)

rust_toolchains = use_extension("@rules_rust//:extensions.bzl", "toolchains")

rust_toolchains.toolchain(edition = "2021")

use_repo(
    rust_toolchains,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")
